crates/djls-templates/src/snapshots/djls_templates__parser__tests__filters__pipe_inside_double_quotes.snap
---
source: crates/djls-templates/src/parser.rs
expression: test_nodelist
---
nodelist:
  - type: Variable
    var: x
    filters:
      - name: default
        arg: "\"a|b\""
        span:
          - 5
          - 13
    span:
      - 2
      - 17
    full_span:
      - 0
      - 21
