crates/djls-templates/src/snapshots/djls_templates__parser__tests__filters__trailing_pipe.snap
---
source: crates/djls-templates/src/parser.rs
expression: test_nodelist
---
nodelist:
  - type: Variable
    var: value
    filters: []
    span:
      - 2
      - 8
    full_span:
      - 0
      - 12
