crates/djls-templates/src/snapshots/djls_templates__parser__tests__filters__whitespace_around_pipes.snap
---
source: crates/djls-templates/src/parser.rs
expression: test_nodelist
---
nodelist:
  - type: Variable
    var: value
    filters:
      - name: filter1
        span:
          - 11
          - 7
      - name: filter2
        span:
          - 21
          - 7
    span:
      - 2
      - 27
    full_span:
      - 0
      - 31
